Added a rename popup so an object is able to be renamed, Addded config to publish check

--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -38,10 +38,16 @@
       <None Update="Assets\Images\Logo.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="EditorAssets\Images\Logo.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="EditorAssets\Fonts\Nunito-Regular.ttf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Assets\Images\" />
+      <Folder Include="EditorAssets\Images\" />
     </ItemGroup>
 
 </Project>
