Implemented Image Ratio Lock. Allows you to keep the ratio of an image on a gameObject, makes it way easier to keep the image the right size. Implemented a icon loader for the game allowing for the game engine to preload icons as images that will be shown in the game engine

--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -44,10 +44,14 @@
       <None Update="EditorAssets\Fonts\Nunito-Regular.ttf">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Icons\Lock.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="EditorAssets\Images\" />
+      <Folder Include="Resources\Icons\" />
     </ItemGroup>
 
 </Project>
