--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -23,6 +23,7 @@
       <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.22.0" />
       <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
+      <PackageReference Include="TinyDialogsNet" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
