--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -46,18 +46,14 @@
       <None Update="EditorAssets\Fonts\Nunito-Regular.ttf">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Icons\Lock.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="EditorAssets\Images\" />
       <Folder Include="Resources\Icons\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Resources\Icons\Lock.png" />
-      <Resource Include="Resources\Icons\Lock.png">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Resource>
     </ItemGroup>
 
 </Project>
