You can now hover over a circuit port and be able to see accepted types, the current used type and the value being held in it

--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -82,6 +82,9 @@
       <None Update="Resources\Icons\Scale.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="EditorAssets\Fonts\Nunito-ExtraBold.ttf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
