--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -26,7 +26,7 @@
       <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
       <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.22.0" />
       <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
-      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
       <PackageReference Include="TinyDialogsNet" Version="2.0.0" />
     </ItemGroup>
 
@@ -89,6 +89,12 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Icons\Plus.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Icons\Play.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Icons\Stop.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
