- OnUpdate and OnStart events now execute - New buttons in toolbar to play, pause and stop the game. - When clicking play the game will store scenedata and return it when stopped

--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -109,6 +109,9 @@
       <None Update="Resources\Icons\Circuit.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Icons\Pause.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
