--- a/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
+++ b/CSCanbulatEngine/CSCanbulatEngine/CSCanbulatEngine.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+      <PackageReference Include="JAJ.Packages.MiniAudioEx" Version="2.6.5" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.0-preview2.25178.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Silk.NET.Core" Version="2.22.0" />
@@ -121,9 +122,13 @@
       <None Update="Resources\Icons\Minus.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Assets\Sounds\roblox-sword.wav">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Assets\Sounds\" />
       <Folder Include="EditorAssets\Images\" />
       <Folder Include="Resources\Icons\" />
     </ItemGroup>
